--- a/record-myself-front/package.json
+++ b/record-myself-front/package.json
@@ -5,7 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix src",
+    "precommit": "lint-staged",
+    "format": "prettier --write src"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -17,6 +20,13 @@
     "@types/react": "17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "lint-staged": "^12.1.4",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:fix"
+    ]
   }
 }
