--- a/record-myself-front/package.json
+++ b/record-myself-front/package.json
@@ -11,13 +11,16 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "antd": "^4.18.0",
     "next": "12.0.7",
+    "next-plugin-antd-less": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "lint-staged": "^12.1.4",
