--- a/record-myself-front/.vscode/settings.json
+++ b/record-myself-front/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "typescript.tsdk": "./node_modules/typescript/lib"
 }
