--- a/record-myself-front/package.json
+++ b/record-myself-front/package.json
@@ -25,7 +25,8 @@
     "eslint-config-next": "12.0.7",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
